addons/backstage/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage
  namespace: backstage
  labels:
    app: backstage
spec:
  selector:
    app: backstage
  ports:
    - port: 7007
      targetPort: 7007
      protocol: TCP
      name: http
