addons/backstage/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backstage-route
  namespace: backstage
  labels:
    app: backstage
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - $BACKSTAGE_HOSTNAME
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: backstage
          port: 7007
